erDiagram
    category {
        UUID id PK
        UUID parent_id FK "nullable, 參照自表"
        VARCHAR name
        VARCHAR icon "nullable"
        TIMESTAMPTZ created_at
    }

    tag {
        UUID id PK
        VARCHAR name
        TIMESTAMPTZ created_at
    }

    product {
        UUID id PK
        UUID category_id FK "nullable"
        VARCHAR name
        VARCHAR barcode "nullable"
        DECIMAL avg_consumption_rate "% per day, 0 = non-consumable"
        DECIMAL low_stock_threshold "% remaining to trigger alert"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    product_tag {
        UUID product_id FK
        UUID tag_id FK
    }

    inventory {
        UUID id PK
        UUID product_id FK
        VARCHAR location "nullable, e.g. 冰箱 / 儲藏室"
        DECIMAL current_quantity "estimated 0.0~1.0"
        TIMESTAMPTZ estimated_depletion_date "nullable"
        DATE nearest_expiry_date "nullable"
        VARCHAR status "ACTIVE / DEPLETED / EXPIRED"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    inventory_event {
        UUID id PK
        UUID inventory_id FK
        VARCHAR event_type "ADD / DEPLETE / ADJUST / EXPIRE"
        DECIMAL quantity_delta
        VARCHAR note "nullable"
        VARCHAR source "MANUAL / SYSTEM"
        TIMESTAMPTZ created_at
    }

    reminder {
        UUID id PK
        UUID inventory_id FK
        VARCHAR reminder_type "LOW_STOCK / EXPIRING / DEPLETION_ESTIMATED"
        VARCHAR status "PENDING / SENT / DISMISSED / SNOOZED"
        TIMESTAMPTZ scheduled_at
        TIMESTAMPTZ sent_at "nullable"
        TIMESTAMPTZ snoozed_until "nullable"
        JSONB metadata "snapshot at trigger time"
        TIMESTAMPTZ created_at
    }

    reminder_feedback {
        UUID id PK
        UUID reminder_id FK
        VARCHAR feedback_type "TOO_EARLY / TOO_LATE / ACCURATE"
        DECIMAL actual_quantity "nullable, user-reported actual"
        VARCHAR note "nullable"
        TIMESTAMPTZ created_at
    }

    budget_category_limit {
        UUID id PK
        UUID category_id FK
        date year_month "DateOnly, e.g. 2026-02-01"
        decimal budget_amount "NT$"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    budget_monthly_total {
        UUID id PK
        date year_month "DateOnly"
        decimal total_budget "NT$"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    budget_alert {
        UUID id PK
        UUID category_id FK "nullable (總預算警示為 null)"
        date year_month
        VARCHAR alert_level "Normal/Warning60/..."
        decimal percentage "e.g. 87.45"
        TIMESTAMPTZ last_notified_at "nullable"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    expenditure {
        UUID id PK
        UUID category_id FK "必填"
        decimal amount "NT$ 正數表示支出"
        date expenditure_date "DateOnly"
        VARCHAR description "nullable"
        UUID inventory_event_id FK "nullable"
        UUID product_id FK "nullable"
        UUID inventory_id FK "nullable"
        VARCHAR source "MANUAL / RECEIPT_SCAN / ..."
        VARCHAR note "nullable"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    category ||--o{ category : "擁有子類別"
    category ||--o{ product : "分類"
    tag ||--o{ product_tag : ""
    product ||--o{ product_tag : ""
    product ||--o{ inventory : "對應到實體"
    inventory ||--o{ inventory_event : "紀錄"
    inventory ||--o{ reminder : "產生"
    reminder ||--o{ reminder_feedback : "收到"
    category ||--o{ budget_category_limit : "設定每月額度"
    budget_alert }o--|| category : "監控（可為總預算）"
    category ||--o{ expenditure : "支出歸屬"
    inventory_event ||--o{ expenditure : "購買事件（可選）"
    product ||--o{ expenditure : "針對產品（可選）"
    inventory ||--o{ expenditure : "補充庫存位置（可選）"